tests/e2e/complex_nested_expression9.error
Error: syntax error in story at line 2, column 31

2|    bar = foo[0] > 5 + foo[1] and foo[1]
                                    ^^^^^

E0122: `int` can't be converted to `boolean`
